create new steps for checking player 1 input a name otherwise it will keep asking for a name

--- a/lib/views/newgame.erb
+++ b/lib/views/newgame.erb
@@ -7,7 +7,7 @@
 
 </style>
 
-<%if @name %>
+<%if @name && !@name.empty? %> 
   <p id="greeting">Welcome, <%= @name %>. You have been registered for the game.</p>
 
 <% else %>
