create test for placing ships and create coordinates and horizontal/vertical options on browser

--- a/lib/views/newgame.erb
+++ b/lib/views/newgame.erb
@@ -5,6 +5,11 @@
     font-size: 50px;
   }
 
+  #start {
+    color: blue;
+    font-size: 50px;
+  }
+
 </style>
 
 <%if @name && !@name.empty? %> 
@@ -37,4 +42,8 @@
 
 
   </form>
+<% end %>
+
+<% if (@name && !@name.empty?) && (@p2name && !@p2name.empty?) %>
+  <a href="/fleetlauncher"><p id="start"> Man your battle stations!!! </p></a>
 <% end %>
