--- a/lib/views/fleetlauncher.erb
+++ b/lib/views/fleetlauncher.erb
@@ -1,9 +1,9 @@
-<form action="/boardpage">
+<form action="/boardset" method="get">
   <input type="radio" name="coords" value="A1">A1<br>
   <input type="radio" name="coords" value="B1">B1<br>
 <br>
-  <input type="radio" name="direction" value="horizontal">horizontal<br>
-  <input type="radio" name="direction" value="vertical">vertical<br>
+  <input type="radio" name="direction" value="horizontally">horizontal<br>
+  <input type="radio" name="direction" value="vertically">vertical<br>
   <input type="submit" value="submit">
 </form>
 
